[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enchante"
version = "0.1.0"
description = "A modular penetration testing framework"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Clery Arque-Ferradou", email = "clery.arqueferradou@gmail.com"},
]
dependencies = [
    "typer",
    "rich",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
enchante = "enchante.cli:app"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
